--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -56,7 +56,7 @@ set automatically_count_files true
 set open_all_images true
 
 # Be aware of version control systems and display information.
-set vcs_aware true
+set vcs_aware false
 
 # State of the three backends git, hg, bzr. The possible states are
 # disabled, local (only show local info), enabled (show local and remote
@@ -119,7 +119,7 @@ set draw_progress_bar_in_status_bar true
 set draw_borders true
 
 # Display the directory name in tabs?
-set dirname_in_tabs false
+set dirname_in_tabs true
 
 # Enable the mouse support?
 set mouse_enabled true
