New font and lots of refinements

--- a/nord-v2/config/mpv/mpv.conf
+++ b/nord-v2/config/mpv/mpv.conf
@@ -50,7 +50,7 @@ fs=yes
 osc=no
 
 # OSD settings
-osd-font=Hack
+osd-font=JetBrains Mono
 osd-font-size=20
 osd-border-size=0
 osd-duration=5000
@@ -63,8 +63,8 @@ osd-playing-msg='${filename}'
 # Can cause performance problems with some drivers and GPUs.
 profile=gpu-hq
 scale=ewa_lanczossharp
-csale=ewa_lanczossharp
-gpu-context=wayland
+cscale=ewa_lanczossharp
+gpu-context=x11
 
 # Force video to lock on the display's refresh rate, and change video and audio
 # speed to some degree to ensure synchronous playback - can cause problems
@@ -80,7 +80,7 @@ gpu-context=wayland
 # Screenshot settings
 screenshot-format=png
 screenshot-png-compression=0
-screenshot-directory=/home/loki/Pictures/mpv_screenshots/
+screenshot-directory=/home/loki/pictures/mpv_screenshots/
 
 ##################
 # audio settings #
@@ -128,6 +128,10 @@ screenshot-directory=/home/loki/Pictures/mpv_screenshots/
 
 # Display English subtitles if available.
 #slang=en
+
+# Subtitle font and size
+sub-font='Inter'
+sub-font-size=30
 
 # Play Finnish audio if available, fall back to English otherwise.
 #alang=fi,en
