--- a/nord-v2/config/ranger/rc.conf
+++ b/nord-v2/config/ranger/rc.conf
@@ -156,7 +156,7 @@ set flushinput true
 
 # Padding on the right when there's no preview?
 # This allows you to click into the space to run the file.
-set padding_right true
+set padding_right false
 
 # Save bookmarks (used with mX and `X) instantly?
 # This helps to synchronize bookmarks between multiple ranger
