--- a/nord-v2/config/redshift/redshift.conf
+++ b/nord-v2/config/redshift/redshift.conf
@@ -56,6 +56,9 @@ adjustment-method=randr
 ; ex: 'redshift -l manual:help'
 ; Keep in mind that longitudes west of Greenwich (e.g. the Americas)
 ; are negative numbers.
+[manual]
+lat=18.5
+lon=73.8
 
 ; Configuration of the adjustment-method
 ; type 'redshift -m METHOD:help' to see the settings.
