--- a/nord-v2/ncmpcpp/config
+++ b/nord-v2/ncmpcpp/config
@@ -273,7 +273,7 @@ song_columns_list_format = (50)[blue]{t|f:Title} (20)[green]{a} (20)[white]{b} (
 ## Note: Custom command that will be executed each time song changes. Useful for
 ## notifications etc.
 ##
-execute_on_song_change = notify-send "  Now Playing" "$(mpc --format '%title% \n%artist% - %album%' current)"
+execute_on_song_change = notify-send " Now Playing" "$(mpc --format '%title% \n%artist% - %album%' current)"
 #
 ##
 ## Note: Custom command that will be executed each time player state
