--- a/nord-v2/config/neofetch/config.conf
+++ b/nord-v2/config/neofetch/config.conf
@@ -1,7 +1,3 @@
-# Neofetch config file
-# https://github.com/dylanaraps/neofetch
-
-
 # See this wiki page for more info:
 # https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 print_info() {
@@ -9,39 +5,34 @@ print_info() {
     info underline
 
     info "OS" distro
-    info "Host" model
     info "Kernel" kernel
     info "Uptime" uptime
-
-    info line_break
-
     info "Packages" packages
     info "Shell" shell
-    info "Resolution" resolution
+    info "DE" de
     info "WM" wm
     info "WM Theme" wm_theme
     info "Theme" theme
-    info "Icons" icons
     info "Terminal" term
     info "Terminal Font" term_font
-    info "Font" font
     info "CPU" cpu
     info "GPU" gpu
     info "Memory" memory
+    prin ""
+    info cols
 
-    # info "GPU Driver" gpu_driver  # Linux only
+    # info "GPU Driver" gpu_driver  # Linux/macOS only
     # info "CPU Usage" cpu_usage
     # info "Disk" disk
     # info "Battery" battery
+    # info "Font" font
     # info "Song" song
+    # [[ "$player" ]] && prin "Music Player" "$player"
     # info "Local IP" local_ip
     # info "Public IP" public_ip
     # info "Users" users
     # info "Locale" locale  # This only works on glibc systems.
 
-    info line_break
-    info cols
-    info line_break
 }
 
 
@@ -67,7 +58,7 @@ kernel_shorthand="on"
 # Shorten the output of the distro function
 #
 # Default:  'off'
-# Values:   'on', 'off', 'tiny'
+# Values:   'on', 'tiny', 'off'
 # Flag:     --distro_shorthand
 # Supports: Everything except Windows and Haiku
 distro_shorthand="off"
@@ -82,7 +73,7 @@ distro_shorthand="off"
 # Example:
 # on:  'Arch Linux x86_64'
 # off: 'Arch Linux'
-os_arch="off"
+os_arch="on"
 
 
 # Uptime
@@ -91,14 +82,45 @@ os_arch="off"
 # Shorten the output of the uptime function
 #
 # Default: 'on'
-# Values:  'on', 'off', 'tiny'
+# Values:  'on', 'tiny', 'off'
 # Flag:    --uptime_shorthand
 #
 # Example:
 # on:   '2 days, 10 hours, 3 mins'
-# off:  '2 days, 10 hours, 3 minutes'
 # tiny: '2d 10h 3m'
+# off:  '2 days, 10 hours, 3 minutes'
 uptime_shorthand="on"
+
+
+# Memory
+
+
+# Show memory pecentage in output.
+#
+# Default: 'off'
+# Values:  'on', 'off'
+# Flag:    --memory_percent
+#
+# Example:
+# on:   '1801MiB / 7881MiB (22%)'
+# off:  '1801MiB / 7881MiB'
+memory_percent="off"
+
+
+# Packages
+
+
+# Show/Hide Package Manager names.
+#
+# Default: 'tiny'
+# Values:  'on', 'tiny' 'off'
+# Flag:    --package_managers
+#
+# Example:
+# on:   '998 (pacman), 8 (flatpak), 4 (snap)'
+# tiny: '908 (pacman, flatpak, snap)'
+# off:  '908'
+package_managers="on"
 
 
 # Shell
@@ -143,13 +165,13 @@ speed_type="bios_limit"
 #
 # Default: 'off'
 # Values: 'on', 'off'.
-# Flag:    --speed_shorthand.
+# Flag:    --speed_shorthand
 # NOTE: This flag is not supported in systems with CPU speed less than 1 GHz
 #
 # Example:
 # on:    'i7-6500U (4) @ 3.1GHz'
 # off:   'i7-6500U (4) @ 3.100GHz'
-speed_shorthand="on"
+speed_shorthand="off"
 
 # Enable/Disable CPU brand in output.
 #
@@ -237,7 +259,7 @@ gpu_brand="on"
 #
 # integrated:
 #   GPU1: Intel Integrated Graphics
-gpu_type="all"
+gpu_type="integrated"
 
 
 # Resolution
@@ -267,7 +289,7 @@ refresh_rate="off"
 # Example:
 # on:  'Numix, Adwaita'
 # off: 'Numix [GTK2], Adwaita [GTK3]'
-gtk_shorthand="on"
+gtk_shorthand="off"
 
 
 # Enable/Disable gtk2 Theme / Icons / Font
@@ -302,6 +324,13 @@ gtk3="on"
 # Values:  'url'
 # Flag:    --ip_host
 public_ip_host="http://ident.me"
+
+# Public IP timeout.
+#
+# Default: '2'
+# Values:  'int'
+# Flag:    --ip_timeout
+public_ip_timeout=2
 
 
 # Disk
@@ -349,7 +378,63 @@ disk_subtitle="mount"
 # Song
 
 
-# Print the Artist and Title on separate lines
+# Manually specify a music player.
+#
+# Default: 'auto'
+# Values:  'auto', 'player-name'
+# Flag:    --music_player
+#
+# Available values for 'player-name':
+#
+# amarok
+# audacious
+# banshee
+# bluemindo
+# clementine
+# cmus
+# deadbeef
+# deepin-music
+# dragon
+# elisa
+# exaile
+# gnome-music
+# gmusicbrowser
+# gogglesmm
+# guayadeque
+# iTunes
+# juk
+# lollypop
+# mocp
+# mopidy
+# mpd
+# netease-cloud-music
+# pogo
+# pragha
+# qmmp
+# quodlibet
+# rhythmbox
+# sayonara
+# smplayer
+# spotify
+# strawberry
+# tomahawk
+# vlc
+# xmms2d
+# xnoise
+# yarock
+music_player="auto"
+
+# Format to display song information.
+#
+# Default: '%artist% - %album% - %title%'
+# Values:  '%artist%', '%album%', '%title%'
+# Flag:    --song_format
+#
+# Example:
+# default: 'Song: Jet - Get Born - Sgt Major'
+song_format="%artist% - %album% - %title%"
+
+# Print the Artist, Album and Title on separate lines
 #
 # Default: 'off'
 # Values:  'on', 'off'
@@ -357,36 +442,17 @@ disk_subtitle="mount"
 #
 # Example:
 # on:  'Artist: The Fratellis'
+#      'Album: Costello Music'
 #      'Song: Chelsea Dagger'
 #
-# off: 'Song: The Fratellis - Chelsea Dagger'
+# off: 'Song: The Fratellis - Costello Music - Chelsea Dagger'
 song_shorthand="off"
 
-
-# Install Date
-
-
-# Whether to show the time in the output
+# 'mpc' arguments (specify a host, password etc).
 #
-# Default:  'on'
-# Values:   'on', 'off'
-# Flag:     --install_time
-#
-# Example:
-# on:  'Thu 14 Apr 2016 11:50 PM'
-# off: 'Thu 14 Apr 2016'
-install_time="on"
-
-# Set time format in the output
-#
-# Default: '24h'
-# Values:  '12h', '24h'
-# Flag:    --install_time_format
-#
-# Example:
-# 12h: 'Thu 14 Apr 2016 11:50 PM'
-# 24h: 'Thu 14 Apr 2016 23:50'
-install_time_format="12h"
+# Default:  ''
+# Example: mpc_args=(-h HOST -P PASSWORD)
+mpc_args=()
 
 
 # Text Colors
@@ -404,7 +470,7 @@ install_time_format="12h"
 # Example:
 # colors=(distro)      - Text is colored based on Distro colors.
 # colors=(4 6 1 8 8 6) - Text is colored in the order above.
-colors=(12 12 12 6 12 7)
+colors=(distro)
 
 
 # Text Options
@@ -432,13 +498,25 @@ underline_enabled="on"
 underline_char="-"
 
 
+# Info Separator
+# Replace the default separator with the specified string.
+#
+# Default:  ':'
+# Flag:     --separator
+#
+# Example:
+# separator="->":   'Shell-> bash'
+# separator=" =":   'WM = dwm'
+separator=":"
+
+
 # Color Blocks
 
 
 # Color block range
 # The range of colors to print.
 #
-# Default:  '0', '7'
+# Default:  '0', '15'
 # Values:   'num'
 # Flag:     --block_range
 #
@@ -544,9 +622,10 @@ disk_display="off"
 # Image backend.
 #
 # Default:  'ascii'
-# Values:   'ascii', 'caca', 'catimg', 'jp2a', 'iterm2', 'off', 'tycat', 'w3m'
+# Values:   'ascii', 'caca', 'chafa', 'jp2a', 'iterm2', 'off',
+#           'termpix', 'pixterm', 'tycat', 'w3m', 'kitty'
 # Flag:     --backend
-image_backend="ascii"
+image_backend="kitty"
 
 # Image Source
 #
@@ -554,12 +633,13 @@ image_backend="ascii"
 #
 # Default:  'auto'
 # Values:   'auto', 'ascii', 'wallpaper', '/path/to/img', '/path/to/ascii', '/path/to/dir/'
+#           'command output (neofetch --ascii "$(fortune | cowsay -W 30)")'
 # Flag:     --source
 #
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source="auto"
+image_source="wallpaper"
 
 
 # Ascii Options
@@ -589,7 +669,7 @@ ascii_distro="auto"
 # Example:
 # ascii_colors=(distro)      - Ascii is colored based on Distro colors.
 # ascii_colors=(4 6 1 8 8 6) - Ascii is colored using these colors.
-ascii_colors=(12 12 12 12 12 12)
+ascii_colors=(distro)
 
 # Bold ascii logo
 # Whether or not to bold the ascii logo.
@@ -646,7 +726,7 @@ crop_offset="center"
 #          --size
 image_size="auto"
 
-# Ggap between image and text
+# Gap between image and text
 #
 # Default: '3'
 # Values:  'num', '-num'
@@ -672,51 +752,6 @@ xoffset=0
 background_color=
 
 
-# Scrot Options
-
-
-# Whether or not to always take a screenshot
-# You can manually take a screenshot with "--scrot" or "-s"
-#
-# Default: 'off'
-# Values:  'on', 'off'
-# Flags:   --scrot
-#          -s
-scrot="off"
-
-# Screenshot Program
-# Neofetch will automatically use whatever screenshot tool
-# is installed on your system.
-#
-# If 'neofetch -v' says that it couldn't find a screenshot
-# tool or you're using a custom tool then you can change
-# the option below to a custom command.
-#
-# Default: 'auto'
-# Values:  'auto' 'cmd -flags'
-# Flag:    --scrot_cmd
-scrot_cmd="auto"
-
-# Screenshot Filename
-# What to name the screenshots
-#
-# Default: 'neofetch-$(date +%F-%I-%M-%S-${RANDOM}).png'
-# Values:  'string'
-# Flag:    --scrot_name
-scrot_name="neofetch-$(date +%F-%I-%M-%S-${RANDOM}).png"
-
-# Image upload host
-# Where to upload the image.
-#
-# Default: 'teknik'
-# Values:  'imgur', 'teknik'
-# Flag:    --image_host
-#
-# NOTE: If you'd like another image host to be added to Neofetch.
-#       Open an issue on github.
-image_host="teknik"
-
-
 # Misc Options
 
 # Stdout mode
@@ -725,9 +760,3 @@ image_host="teknik"
 # Default: 'off'
 # Values: 'on', 'off'
 stdout="off"
-
-# Config version.
-#
-# NOTE: Don't change this value, neofetch reads this to determine
-# how to handle backwards compatibility.
-config_version="3.3.0"
