--- a/moonfly/config/mpv/mpv.conf
+++ b/moonfly/config/mpv/mpv.conf
@@ -100,7 +100,7 @@ deband-grain=5 # Range 0-4096. Inject grain to cover up bad banding, higher valu
 screenshot-format=png
 screenshot-high-bit-depth=yes
 screenshot-png-compression=0
-screenshot-directory=/home/loki/pictures/mpv_screenshots/
+screenshot-directory=$HOME/pictures/mpv_screenshots/
 
 ##################
 # audio settings #
