--- a/mountain/config/aria2/aria2.conf
+++ b/mountain/config/aria2/aria2.conf
@@ -1,5 +1,5 @@
 ## General Options
-dir=/home/loki/downloads/aria2
+dir=$HOME/downloads/aria2
 continue=true
 file-allocation=falloc
 summary-interval=0
