--- a/mountain/config/mpv/mpv.conf
+++ b/mountain/config/mpv/mpv.conf
@@ -94,7 +94,7 @@ gpu-context=wayland
 # Screenshot settings
 screenshot-format=png
 screenshot-png-compression=0
-screenshot-directory=/home/loki/pictures/mpv_screenshots/
+screenshot-directory=$HOME/pictures/mpv_screenshots/
 
 ##################
 # audio settings #
