--- a/nord-v2/config/ranger/rifle.conf
+++ b/nord-v2/config/ranger/rifle.conf
@@ -177,7 +177,7 @@ mime ^image/svg, has display,  X, flag f = display -- "$@"
 
 mime ^image, has pqiv,      X, flag f = pqiv -- "$@"
 mime ^image, has sxiv,      X, flag f = sxiv -- "$@"
-mime ^image, has feh,       X, flag f = feh --draw-filename --draw-tinted --auto-rotate --scale-down --hide-pointer --image-bg '#2E3440' --fontpath /home/loki/.local/share/fonts/JetBrainsMono/ --font "JetBrainsMono-Regular/10" -- "$@"
+mime ^image, has feh,       X, flag f = feh --draw-filename --draw-tinted --auto-rotate --scale-down --hide-pointer --image-bg '#2E3440' --fontpath $HOME/.local/share/fonts/JetBrainsMono/ --font "JetBrainsMono-Regular/10" -- "$@"
 mime ^image, has mirage,    X, flag f = mirage -- "$@"
 mime ^image, has ristretto, X, flag f = ristretto "$@"
 mime ^image, has eog,       X, flag f = eog -- "$@"
