--- a/nord-v3/config/sway/config
+++ b/nord-v3/config/sway/config
@@ -17,7 +17,7 @@ client.unfocused        #88c0d0 #2e3440 #d8dee9 #4c566a   #4c566a
 client.urgent           #ebcb8b #ebcb8b #2e3440 #8fbcbb   #ebcb8b
 
 # Import GTK settings
-exec_always /home/loki/bin/import-gsettings \
+exec_always $HOME/bin/import-gsettings \
     gtk-theme:gtk-theme-name \
     icon-theme:gtk-icon-theme-name \
     cursor-theme:gtk-cursor-theme-name\
@@ -72,7 +72,7 @@ set $menu wofi --hide-scroll | xargs swaymsg exec --
 
 ## Output configuration
 # Default wallpaper 
-output * bg /home/loki/pictures/wallpapers/nord-couple.png fill
+output * bg $HOME/pictures/wallpapers/nord-couple.png fill
 
 # Behavior
 focus_follows_mouse yes
