--- a/tokyo-night/config/waybar/config
+++ b/tokyo-night/config/waybar/config
@@ -36,11 +36,11 @@
 	"custom/date": {
     		"format": "󰸗 {}",
 		"interval": 3600,
-		"exec": "/home/loki/bin/waybar-date.sh"
+		"exec": "$HOME/bin/waybar-date.sh"
 	},
 	"custom/power": {
 		"format": "󰐥",
-		"on-click": "/home/loki/bin/waybar-power.sh"
+		"on-click": "$HOME/bin/waybar-power.sh"
 	},
 	"clock": {
 		"format": "󰅐 {:%H:%M}",
